# housework-reward

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/data/: example_records.yaml
backend/housework/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/housework/management/commands/: ensure_migrations.py  ensure_superuser.py  load_example_data.py
backend/housework/migrations/: 0001_initial.py  0002_alter_houseworkrecord_image.py  0003_rename_scale_houseworkrecord_points.py  0004_alter_contributor_name.py  0005_reset_sequence.py  0006_reset_sequence.py
frontend/: Dockerfile  env.sh  package.json
frontend/public/: manifest.json
frontend/src/: App.jsx  api.js
frontend/src/components/: RecordForm.jsx
frontend/src/pages/: AddRecord.jsx  EditRecord.jsx  ViewRecords.jsx
